update: refactor implementation of oauth2 and generate token, fix envoy config
